src/test/ui/const-generics/min-and-full-same-time.stderr
error: features `const_generics` and `min_const_generics` are incompatible, using them at the same time is not allowed
  --> $DIR/min-and-full-same-time.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
...
LL | #![feature(min_const_generics)]
   |            ^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error: aborting due to previous error

